Test/Error/ac/ERROR.SHAMT.TOO.LARGE.ac
CONST C $FF << $100;
